--- a/resources/sass/templates/_navbar.scss
+++ b/resources/sass/templates/_navbar.scss
@@ -38,7 +38,7 @@
 				margin-left: 2.5rem;
 				position: relative;
 				overflow: hidden;
-				width: 20rem;
+				width: 20vw;
 
 				&.show {
 					border-right: 2px solid $green;
