--- a/resources/sass/templates/_sidebar.scss
+++ b/resources/sass/templates/_sidebar.scss
@@ -2,12 +2,10 @@
 	margin-left: 2.5rem;
 	margin-top: -0.5rem;
 	height: fit-content;
-	min-width: 20rem;
 	position: sticky;
 	color: white;
-	width: 20rem;
+	width: 20vw;
 	top: 5.5rem;
-	flex: 1;
 
 	.sidebar-border {
 		height: calc(100% - 1rem - 1px);
